feat: connect android client to backend APIs