@@ -4,13 +4,22 @@ import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.fragmentwords.mapper.UnknownWordMapper;
+import com.fragmentwords.mapper.VocabMapper;
 import com.fragmentwords.mapper.WordMapper;
+import com.fragmentwords.model.dto.NotebookItemDTO;
+import com.fragmentwords.model.dto.NotebookPageDTO;
 import com.fragmentwords.model.entity.UnknownWord;
+import com.fragmentwords.model.entity.Vocab;
 import com.fragmentwords.model.entity.Word;
 import com.fragmentwords.service.UnknownWordService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
@@ -19,18 +28,46 @@ public class UnknownWordServiceImpl extends ServiceImpl<UnknownWordMapper, Unkno
     @Autowired
     private WordMapper wordMapper;
 
+    @Autowired
+    private VocabMapper vocabMapper;
+
     @Override
-    public Page<Word> getUnknownWords(String deviceId, Integer pageNum, Integer pageSize) {
+    public NotebookPageDTO getUnknownWords(String deviceId, Integer pageNum, Integer pageSize) {
         LambdaQueryWrapper<UnknownWord> wrapper = new LambdaQueryWrapper<>();
-        wrapper.eq(UnknownWord::getDeviceId, deviceId);
+        wrapper.eq(UnknownWord::getDeviceId, deviceId)
+                .orderByDesc(UnknownWord::getId);
+
         Page<UnknownWord> unknownPage = this.page(new Page<>(pageNum, pageSize), wrapper);
-        List<Long> wordIds = unknownPage.getRecords().stream()
+        List<UnknownWord> unknownWords = unknownPage.getRecords();
+        if (unknownWords.isEmpty()) {
+            return new NotebookPageDTO(pageNum, pageSize, unknownPage.getTotal(), Collections.emptyList());
+        }
+
+        List<Long> wordIds = unknownWords.stream()
                 .map(UnknownWord::getWordId)
-                .collect(Collectors.toList());
-        List<Word> words = wordMapper.selectBatchIds(wordIds);
-        Page<Word> resultPage = new Page<>(pageNum, pageSize, unknownPage.getTotal());
-        resultPage.setRecords(words);
-        return resultPage;
+                .filter(Objects::nonNull)
+                .toList();
+
+        Map<Long, Word> wordsById = wordMapper.selectBatchIds(wordIds).stream()
+                .collect(Collectors.toMap(Word::getId, word -> word, (left, right) -> left, LinkedHashMap::new));
+
+        List<Long> vocabIds = wordsById.values().stream()
+                .map(Word::getVocabId)
+                .filter(Objects::nonNull)
+                .distinct()
+                .toList();
+
+        Map<Long, String> vocabNamesById = vocabIds.isEmpty()
+                ? Collections.emptyMap()
+                : vocabMapper.selectBatchIds(vocabIds).stream()
+                .collect(Collectors.toMap(Vocab::getId, Vocab::getName, (left, right) -> left));
+
+        List<NotebookItemDTO> items = unknownWords.stream()
+                .map(unknownWord -> toNotebookItem(unknownWord, wordsById, vocabNamesById))
+                .filter(Objects::nonNull)
+                .toList();
+
+        return new NotebookPageDTO(pageNum, pageSize, unknownPage.getTotal(), items);
     }
 
     @Override
@@ -58,5 +95,26 @@ public class UnknownWordServiceImpl extends ServiceImpl<UnknownWordMapper, Unkno
         LambdaQueryWrapper<UnknownWord> wrapper = new LambdaQueryWrapper<>();
         wrapper.eq(UnknownWord::getDeviceId, deviceId);
         return (int) this.count(wrapper);
+    }
+
+    private NotebookItemDTO toNotebookItem(
+            UnknownWord unknownWord,
+            Map<Long, Word> wordsById,
+            Map<Long, String> vocabNamesById) {
+        Word word = wordsById.get(unknownWord.getWordId());
+        if (word == null) {
+            return null;
+        }
+
+        NotebookItemDTO item = new NotebookItemDTO();
+        item.setWordId(word.getId());
+        item.setWord(word.getWord());
+        item.setPhonetic(word.getPhonetic());
+        item.setTranslation(word.getTranslation());
+        item.setExample(word.getExample());
+        item.setVocabId(word.getVocabId());
+        item.setVocabName(vocabNamesById.get(word.getVocabId()));
+        item.setAddedAt(unknownWord.getCreateTime());
+        return item;
     }
 }
